--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.2",
+    "randomcolor": "^0.5.3",
     "react": "^16.4.1",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.2.0"
