--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-styled-components": "^1.5.1",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "randomcolor": "^0.5.3",
     "react": "^16.4.1",
+    "react-app-rewire-mobx": "^1.0.8",
+    "react-app-rewired": "^1.5.2",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
@@ -17,9 +22,9 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
   }
 }
