--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-styled-components": "^1.5.1",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
+    "immutability-helper": "^2.7.1",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "randomcolor": "^0.5.3",
