--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-app-rewired eject"
-  }
+  },
+  "proxy": "http://localhost:3001/"
 }
